testdata/errors/import_nonconst_top/lib.spy
def f(x: int) -> int:
    return x + 1

print("side-effect at module load")
